--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,12 @@
 .App {
-  padding-left: 60px;
-  padding-right: 60px;
+  padding-left: 30px;
+  padding-right: 30px;
+  width: 375px;
 }
 
 .header {
   width: 100%;
-  height: 200px;
+  height: 100px;
   background-color: rgba(90, 86, 86, 0.522);
   display: flex;
 }
@@ -16,31 +17,35 @@
 }
 
 footer {
-  height: 200px;
+  height: 100px;
   background-color: rgba(90, 86, 86, 0.522);
 }
 
 .logo {
-  height: 160px;
-  margin-top: 20px;
+  height: 80px;
+  margin-top: 10px;
   margin-left: 0;
   margin-right: auto;
 }
 
 .user-state {
-  width: 300px;
+  width: 150px;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: right;
 }
 
-.user-desc {
+.user-desc h2 {
+  font-size: 12pt;
+}
+.user-desc p {
+  font-size: 10pt;
 }
 
 .user-img {
   border-radius: 50%;
   border: 1px solid black;
-  width: 80px;
-  height: 80px;
+  width: 40px;
+  height: 40px;
 }
