--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   padding-left: 30px;
   padding-right: 30px;
+  margin: 100px auto;
   width: 375px;
+  border: 3px solid black;
 }
 
 .header {
@@ -16,7 +18,7 @@
   background-color: rgba(90, 86, 86, 0.522);
 }
 
-footer {
+.footer {
   height: 100px;
   background-color: rgba(90, 86, 86, 0.522);
 }
@@ -44,8 +46,15 @@ footer {
 }
 
 .user-img {
-  border-radius: 50%;
-  border: 1px solid black;
-  width: 40px;
+  width: 50px;
   height: 40px;
+  border-radius: 10px;
+  background-image: url("./image/seungminhead.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.footer .footer-img {
+  width: 100%;
+  background-image: url("./image/img_5.png");
 }
