--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 .App {
   padding-left: 30px;
   padding-right: 30px;
-  margin: 100px auto;
-  width: 375px;
+  margin: 100px;
+  width: 308px;
   border: 3px solid black;
 }
 
 .header {
   width: 100%;
-  height: 100px;
+  height: 45px;
   background-color: rgba(90, 86, 86, 0.522);
   display: flex;
 }
@@ -48,7 +48,7 @@
   width: 50px;
   height: 40px;
   border-radius: 10px;
-  background-image: url("./image/seungminhead.png");
+  background-image: url("./image/search.png");
   background-size: cover;
   background-repeat: no-repeat;
 }
