--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   background-repeat: no-repeat;
 }
 
-.footer .footer-img {
+.App-banner .banner-img {
   width: 100%;
   background-image: url("./image/img_5.png");
 }
