--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,12 +1,37 @@
 .header {
   width: 100%;
-  height: 60px;
-  background-color: rgba(90, 86, 86, 0.522);
+  height: 50px;
+  background-color: #003333;
   display: flex;
 }
 
-.logo {
-  height: 60px;
-  margin-left: 0;
-  margin-right: auto;
+.header .back-area {
+  margin: auto;
+  display: flex;
+}
+
+.header .logo-area {
+  margin: auto;
+  display: flex;
+}
+
+.header .search-area {
+  margin: auto;
+  display: flex;
+}
+
+.header .back-area .back {
+  width: 40px;
+  height: 40px;
+  margin: auto;
+}
+
+.header .logo-area .logo {
+  height: 50px;
+  margin: auto;
+}
+
+.header .search-area .search {
+  width: 30px;
+  height: 30px;
 }
