--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -2,8 +2,9 @@
   padding-left: 30px;
   padding-right: 30px;
   margin: 100px;
-  width: 308px;
+  width: 612px;
   border: 3px solid black;
+  box-sizing: border-box;
 }
 
 .body {
