--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,5 +1,5 @@
 .header {
-  width: 100%;
+  width: 612px;
   height: 80px;
   background-color: #003333;
   display: flex;
@@ -16,6 +16,7 @@
 .header .back-area .back {
   width: 60px;
   height: 60px;
+  margin-left: 10px;
 }
 
 .header .logo-area .logo {
@@ -25,4 +26,5 @@
 .header .search-area .search {
   width: 50px;
   height: 50px;
+  margin-right: 10px;
 }
