--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,13 +1,13 @@
 .App {
-  padding-left: 30px;
-  padding-right: 30px;
   margin: 100px;
-  width: 612px;
+  width: 615px;
   border: 3px solid black;
   box-sizing: border-box;
 }
 
 .body {
+  margin-left: 30px;
+  margin-right: 30px;
   border: 1px solid red;
   background-color: rgba(90, 86, 86, 0.522);
 }
