--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,3 +1,4 @@
+/* HEADER COMMON */
 .header {
   width: 612px;
   height: 80px;
@@ -13,16 +14,19 @@
   display: flex;
 }
 
+/* HEADER BACK BUTTON */
 .header .back-area .back {
   width: 60px;
   height: 60px;
   margin-left: 10px;
 }
 
+/* HEADER LOGO IMG */
 .header .logo-area .logo {
   height: 80px;
 }
 
+/* HEADER SEARCH BUTTON */
 .header .search-area .search {
   width: 50px;
   height: 50px;
