--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -1,3 +1,4 @@
+/* MAIN COMMON */
 .App {
   margin: 100px;
   width: 615px;
@@ -9,48 +10,57 @@
 .body {
   margin-left: 30px;
   margin-right: 30px;
-  border: 1px solid red;
+  border-top: 1px solid white;
+  border-bottom: 1px solid red;
+  border-left: 1px solid red;
+  border-right: 1px solid red;
 }
 
-.body .tab-navigation {
+/* MAIN BODY FIRST */
+.body .main-body-first {
   margin-top: 50px;
 }
 
-.body .tab-navigation h2 {
+.body .main-body-first h2 {
   color: rgb(99, 99, 99);
 }
 
-.body .tab-navigation .swiper-area {
+.body .main-body-first .swiper-area {
   height: 240px;
   margin-top: 5%;
 }
 
-.body .tab-navigation .tab-title {
+.body .main-body-first .tab-title {
   height: 20%;
   margin-bottom: 10px;
   box-sizing: border-box;
 }
 
-.body .tab-navigation .tab-contents {
+.body .main-body-first .tab-contents {
   height: 80%;
 }
 
-.body .tab-navigation .tab-title .title {
+.body .main-body-first .tab-title .title {
   font-size: 15pt;
   text-align: center;
 }
 
-.body .tab-navigation .tab-title .swiper-slide-thumb-active .title {
+.body .main-body-first .tab-title .swiper-slide-thumb-active .title {
   font-weight: bold;
   color: #003333;
   padding-bottom: 10px;
   border-bottom: 3px solid #003333;
 }
 
-.body .tab-navigation .tab-contents .swiper-wrapper {
+.body .main-body-first .tab-contents .swiper-wrapper {
   display: flex;
 }
 
-.body .tab-navigation .tab-contents .contents {
+.body .main-body-first .tab-contents .contents {
   text-align: center;
+}
+
+/* MAIN BODY SECOND */
+.body .main-body-second h2 {
+  color: rgb(99, 99, 99);
 }
