--- a/src/css/Main.css
+++ b/src/css/Main.css
@@ -7,6 +7,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.App-main .header .back-area .back {
+  visibility: hidden;
+}
+
 .body {
   margin-left: 30px;
   margin-right: 30px;
@@ -19,6 +23,7 @@
 /* MAIN BODY FIRST */
 .body .main-body-first {
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .body .main-body-first h2 {
@@ -60,7 +65,16 @@
   text-align: center;
 }
 
+/* TAB FRAGMENT 1 */
+.main-body-first .tab-contents .contents .table-area-first {
+  width: 100%;
+}
+
 /* MAIN BODY SECOND */
+.body .main-body-second {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
 .body .main-body-second h2 {
   color: rgb(99, 99, 99);
 }
@@ -71,8 +85,9 @@
   background-color: white;
   border-radius: 5px;
   border: none;
-  box-shadow: 1px 1px 2px 2px rgb(144, 144, 144);
+  box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
   font-size: medium;
+  color: rgb(99, 99, 99);
 }
 
 /* MAIN BODY SECOND EXAMPLE */
