--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -11,6 +11,18 @@
   visibility: hidden;
 }
 
+// BTN COMMON
+.btn--link {
+  width: 100%;
+  height: 50px;
+  background-color: white;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+  font-size: medium;
+  color: rgb(99, 99, 99);
+}
+
 .body {
   margin-left: 30px;
   margin-right: 30px;
@@ -101,6 +113,18 @@
           .data-num {
             width: 20%;
           }
+        }
+
+        .btn--link {
+          width: 90%;
+          height: 40px;
+          margin-top: 20px;
+          background-color: white;
+          border-radius: 5px;
+          border: none;
+          box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+          font-size: medium;
+          color: rgb(99, 99, 99);
         }
       }
     }
