--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -37,6 +37,7 @@
     margin-bottom: 50px;
     h2 {
       color: rgb(99, 99, 99);
+      font-style: italic;
     }
     .swiper-area {
       height: 400px;
