--- a/src/css/Main.scss
+++ b/src/css/Main.scss
@@ -36,8 +36,9 @@
     margin-top: 50px;
     margin-bottom: 50px;
     h2 {
+      font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+        sans-serif;
       color: rgb(99, 99, 99);
-      font-style: italic;
     }
     .swiper-area {
       height: 400px;
