--- a/src/css/Search.scss
+++ b/src/css/Search.scss
@@ -1,8 +1,20 @@
 .App-search {
   .search-body {
-    width: 80%;
+    width: 90%;
     margin: auto;
     margin-top: 10%;
-    margin-bottom: 80%;
+    margin-bottom: 90%;
+    .mb-3 {
+      padding: 10px;
+      border-radius: 5px;
+      box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+      .search-btn {
+        border: none;
+      }
+      .search-text {
+        border: none;
+        border-bottom: 2px solid gray;
+      }
+    }
   }
 }
