--- a/src/css/Crime.scss
+++ b/src/css/Crime.scss
@@ -69,3 +69,30 @@
     }
   }
 }
+
+.App-crimedetail {
+  .crimedetail-body {
+    width: 90%;
+    min-height: 965px;
+    height: auto;
+    overflow: hidden;
+    margin: auto;
+    margin-top: 5%;
+    margin-bottom: 10%;
+    border-radius: 1rem;
+    box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+    text-align: center;
+    .detail-title {
+      margin-top: 3%;
+      font-size: 3rem;
+      color: #003333;
+    }
+    .title-body-between {
+      height: 0.2rem;
+    }
+    .detail-body {
+      display: block;
+      justify-content: center;
+    }
+  }
+}
