--- a/src/css/Crime.scss
+++ b/src/css/Crime.scss
@@ -93,6 +93,18 @@
     .detail-body {
       display: block;
       justify-content: center;
+      h3 {
+        margin-top: 5%;
+        font-size: 2rem;
+      }
+      img {
+        width: 90%;
+        margin-top: 5%;
+      }
+      p {
+        margin-top: 5%;
+        font-size: 1.5rem;
+      }
     }
   }
 }
