--- a/src/css/Crime.scss
+++ b/src/css/Crime.scss
@@ -1,3 +1,4 @@
+// CRIME MAIN
 .App-crimemain {
   .crimemain-body {
     width: 90%;
@@ -24,6 +25,7 @@
   }
 }
 
+//CRIME RESULT
 .App-crimeresult {
   .crimeresult-body {
     width: 90%;
@@ -59,6 +61,15 @@
           width: 20%;
           font-size: 1.7rem;
           font-weight: 600;
+          a {
+            color: black;
+            text-decoration: none;
+          }
+          .result-word-link:hover {
+            color: #003333;
+            transform: scale(1.2);
+            transition: all 1s;
+          }
         }
         .result-mean {
           width: 80%;
@@ -70,6 +81,7 @@
   }
 }
 
+// CRIME DETAIL
 .App-crimedetail {
   .crimedetail-body {
     width: 90%;
@@ -95,15 +107,15 @@
       justify-content: center;
       h3 {
         margin-top: 5%;
-        font-size: 2rem;
+        font-size: 2.5rem;
       }
       img {
-        width: 90%;
+        width: 95%;
         margin-top: 5%;
       }
       p {
         margin-top: 5%;
-        font-size: 1.5rem;
+        font-size: 1.75rem;
       }
     }
   }
