--- a/src/css/Search.scss
+++ b/src/css/Search.scss
@@ -1,3 +1,4 @@
+// SEARCH MAIN
 .App-search {
   .search-body {
     width: 90%;
@@ -18,46 +19,46 @@
       }
     }
 
-    // SEARCH BEFORE
-
-    // SEARCH AFTER
-    h2 {
-      font-family: Arial, Helvetica, sans-serif;
-    }
-    p {
-      font-size: 12pt;
-      color: rgb(99, 99, 99);
-    }
-    .result-crime {
-      margin-top: 10%;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
-      p {
-        margin-left: 10px;
-      }
-    }
-    .result-word {
-      margin-top: 5%;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
-      p {
-        margin-left: 10px;
-      }
-    }
-    .result-static {
-      margin-top: 5%;
-      padding: 20px;
-      border-radius: 5px;
-      box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
-      text-align: center;
+    // SEARCH RESULT
+    .search-result {
       h2 {
-        text-align: start;
+        font-family: Arial, Helvetica, sans-serif;
       }
-      img {
-        margin-top: 10px;
-        margin-bottom: 20px;
+      p {
+        font-size: 12pt;
+        color: rgb(99, 99, 99);
+      }
+      .result-crime {
+        margin-top: 10%;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
+        p {
+          margin-left: 10px;
+        }
+      }
+      .result-word {
+        margin-top: 5%;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
+        p {
+          margin-left: 10px;
+        }
+      }
+      .result-static {
+        margin-top: 5%;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 2px 2px 4px 4px rgb(170, 170, 170);
+        text-align: center;
+        h2 {
+          text-align: start;
+        }
+        img {
+          margin-top: 10px;
+          margin-bottom: 20px;
+        }
       }
     }
   }
