--- a/src/css/Dictionary.scss
+++ b/src/css/Dictionary.scss
@@ -11,5 +11,22 @@
     border-radius: 1rem;
     box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
     text-align: center;
+    .first-table {
+      width: 65%;
+      height: 350px;
+      margin: 30px;
+      margin-top: 10%;
+      border-radius: 1rem;
+      box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+    }
+    .second-table {
+      width: 65%;
+      height: 350px;
+      margin: 30px;
+      margin-top: 20%;
+      left: 20%;
+      border-radius: 1rem;
+      box-shadow: 1px 1px 2px 2px rgb(170, 170, 170);
+    }
   }
 }
